--- a/notest.org
+++ b/notest.org
@@ -1,3 +1,12 @@
 * add to bashrc
 
 export $(/usr/bin/gnome-keyring-daemon --start --components=pkcs11,secrets,ssh)
+
+* strips for emacs
+
+** plantuml
+
+download jar from http://plantuml.com/download
+
+mkdir -p ~/plantuml
+cd ~/plantuml && ln -s plantuml.1.2017.16.jar plantuml.jar
